# programming

./: README.md
codes/: CMakeLists.txt  a.out  c0001.c  cindex.txt  cpp0003.cpp  cpp0004.cpp  cpp0005.cpp  cpp0007.cpp  cpp0008.cpp  cppindex.txt  onlyTest.cpp
codes/CCollections/: c0002.c  c0003.c  c0004.c
codes/ClassCollections/: Complex.cpp  Complex.h  complex.cpp  complex.h  exerciseClass.cpp  exerciseClass.h  ska_bytell_hash_map.hpp  ska_unordered_map.hpp
codes/CppCollections/: cpp0001.cpp  cpp0002.cpp  cpp0004.cpp  cpp0005.cpp  cpp0006.cpp  cpp0008hash.cpp  cppindex.txt
codes/build20200223211235/: CMakeCache.txt  Makefile  cmake_install.cmake
codes/cppPrimer/: CMakeLists.txt  autobuild.sh  cppp001.cpp  main  testOut.qr
codes/cppPrimer/ClassCollections/: CPPPChapter01.cpp  CPPPChapter01.h
codes/cppPrimer/build20200801222225/: CMakeCache.txt  Makefile  cmake_install.cmake
codes/current_collection/: cpp0008.cpp
codes/cvOpencv/: CMakeLists.txt  (+1 more)
codes/mesh-openmesh/: CMakeLists.txt  README.md  main  mesh002Iterators.cpp  pcdViewer  save_auto.sh
codes/mesh-openmesh/cppOpenmeshCopy/: mesh001cubic.cpp
codes/mesh-openmesh/openmesh0001qr/: main  mesh001cubic.cpp  openmesh0001qr_log.txt
codes/mesh-openmesh/openmesh0002qr/: bunny_out1.ply  bunny_out2.ply  mesh002Iterators.cpp  openmesh0002qr_log.txt
codes/openglstudying/: CMakeLists.txt  auto.sh  gl003hello_triangle.cpp  gl006_shader.cpp  gl014_camera.cpp  glad.txt  install glfw.txt  main.cpp  save_auto.sh
codes/openglstudying/b2/: CMakeCache.txt
codes/openglstudying/copy_cpps/: gl002blankwindow.cpp  gl007_shaderclass.cpp  gl012_transformation3_2copy-whywrong.cpp  gl015_camera.cpp  gl016_cameraClass0503.cpp
codes/openglstudying/howtoinstall/: install glfw.txt  install opengl
codes/openglstudying/include/: camera_qr.h  functions.h
codes/openglstudying/opengl0001qr/: CMakeLists.txt  gl001opengl_teapot.cpp
codes/openglstudying/opengl0002qr/: CMakeLists.txt  opengl0002qr_log.txt
codes/openglstudying/opengl0003qr/: glad.c  main
codes/openglstudying/opengl0004qr/: opengl0004qr_log.txt
codes/openglstudying/opengl0005qr/: gl005triangles.cpp
codes/openglstudying/opengl0006qr/: CMakeLists.txt  gl006_shader.cpp  main  opengl0006qr_log.txt
codes/openglstudying/opengl0007qr/: main
codes/openglstudying/opengl0008qr/: gl008_texture.cpp
codes/openglstudying/opengl0010qr/: gl010_transformation2.cpp
codes/openglstudying/opengl0011qr/: main
codes/openglstudying/opengl0012qr/: opengl0012qr_log.txt
codes/openglstudying/opengl0013qr/: main
codes/openglstudying/openglCollections/Basic/opengl0002qr/: main
codes/openglstudying/openglCollections/Basic/opengl0003qr/: gl003hello_triangle.cpp  opengl0003qr_log.txt
codes/openglstudying/openglCollections/Basic/opengl0004qr/: gl004triangle_EBO.cpp  main  opengl0004qr_log.txt
codes/openglstudying/openglCollections/Basic/opengl0005qr/: main  opengl0005qr_log.txt
codes/openglstudying/openglCollections/Basic/opengl0007qr/: CMakeLists.txt  opengl0007qr_log.txt
codes/openglstudying/openglCollections/Basic/opengl0008qr/: CMakeLists.txt  main  opengl0008qr_log.txt
codes/openglstudying/openglCollections/Basic/opengl0009qr/: gl009_transformation.cpp  main  opengl0009qr_log.txt
codes/openglstudying/openglCollections/Basic/opengl0010qr/: main  opengl0010qr_log.txt
codes/openglstudying/openglCollections/Basic/opengl0011qr/: gl011_transformation3_1.cpp  opengl0011qr_log.txt
codes/openglstudying/openglCollections/Basic/opengl0012qr/: gl012_transformation3_2.cpp  main
codes/openglstudying/openglCollections/Basic/opengl0013qr/: gl013_transformation3_3.cpp  opengl0013qr_log.txt
codes/openglstudying/openglCollections/Basic/opengl0014qr/: gl014_camera.cpp  main  opengl0014qr_log.txt
codes/openglstudying/openglCollections/Basic/opengl0015qr/: main  opengl0015qr_log.txt
codes/openglstudying/openglCollections/Basic/opengl0016qr/: main  opengl0016qr_log.txt
codes/openglstudying/resources/data/: data.h
codes/openglstudying/resources/shaders/: fragment001.qr  fragment002.qr  fragment003_tex.qr  vertex001.qr  vertex002_tex.qr  vertex003_trans.qr
codes/pcl/: CMakeLists.txt  FiltersCollection.cpp  Initialization.qr  PclCollection.cpp  README.md
codes/pcl/Harris3D-failed/: harris3D.cpp
codes/pcl/build20200613000418/: CMakeCache.txt  Makefile  cmake_install.cmake  main
codes/pcl/logs/: PclCollection.cpp  logs2020-03-2323:39:34  logs2020-03-2400:38:39  logs2020-03-2400:45:52  logs2020-03-2400:49:23  logs2020-03-2400:52:33  logs2020-03-2400:56:26  logs2020-03-2400:59:17  logs2020-03-2401:01:32  logs2020-03-2401:35:48  logs2020-03-2401:37:32  logs2020-03-2401:40:45  logs2020-03-2401:42:38  logs2020-03-2401:48:55  logs2020-03-2401:50:09  logs2020-03-2401:51:33  logs2020-03-2401:54:38  logs2020-03-2401:56:24  logs2020-03-2401:59:13  logs2020-03-2402:00:28  logs2020-03-2402:05:36  logs2020-03-2402:06:50  logs2020-03-2402:07:50  logs2020-03-2402:09:31  logs2020-06-1223:54:56  logs2020-06-1223:57:35  logs2020-06-1223:58:49  logs2020-06-1300:00:33  logs2020-06-1300:02:51  logs2020-06-1300:04:45
codes/pcl/pcdDifference/: CMakeLists.txt  differences20200514.cpp  main
codes/pcl/pcdDifference/build20200612230820/: CMakeCache.txt  Makefile  cmake_install.cmake  main
codes/pcl/pcdViewer/: pcdViewer  pcdViewer.cpp
codes/pcl/plyViewer/: plyViewer  plyViewer.cpp
codes/practice/: CMakeLists.txt  practices20200802.cpp
codes/practice/ClassCollections/: e001Matrix.h  e001Matrix.txt  e001MatrixOutput.txt
codes/practice/build20200802225929/: CMakeCache.txt  Makefile  cmake_install.cmake  main
codes/projects/: CMakeLists.txt  MyBinaryTree20201225  log.md  moranTest.cpp  pointtime.cpp  save_auto.sh
codes/projects/BinaryTree20201225/: ClassMyBinaryTree.cpp  ClassMyBinaryTree.h  MainMyBinaryTree.cpp
codes/projects/ProjectsCollections/: moranTest.cpp
codes/projects/build20200225174205/: CMakeCache.txt  Makefile  cmake_install.cmake  main
codes/projects/datasets/: err.pcd  err.txt  p0.pcd  p0.txt
notes/: Notefrom20200119.aux  Notefrom20200119.tex  README.md
(+67 files in other folders)
